# nanobananapro-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  package.json  pyproject.toml  style-library.md
.claude/: README.md  gemini-patterns.md  settings.json  taste-patterns.md
.claude/hooks/: check-style-guide-lock.sh  log-generated-image.sh  protect-finals.sh
.claude/skills/: README.md
.claude/skills/agent-brand/: SKILL.md
.claude/skills/capture-trends/: SKILL.md
.claude/skills/enhance-prompt/: SKILL.md
.claude/skills/image-prompt/: SKILL.md
.claude/skills/kling-multishot/: SKILL.md
.claude/skills/kling-source-digester/: SKILL.md
.claude/skills/moodboard/: SKILL.md
.claude/skills/project-setup/: SKILL.md
.claude/skills/prompt-anatomy/: SKILL.md
.claude/skills/quickstart/: SKILL.md
.claude/skills/style-library/: SKILL.md
docs/: NOTES-mcp-output-handling.md
hooks/: NBP_CHEATSHEET.md  inject-best-practices.sh
scripts/: install-hook.sh
src/: PROMPT_GUIDE.md  client.ts  digest-schema.ts  index.ts  retry.ts  server.ts  sessions.ts  utils.ts
src/nanobananapro_mcp/: __init__.py  __main__.py  client.py  retry.py  server.py  sessions.py  utils.py
tests/: __init__.py  client.test.ts  digest-schema.test.ts  error-handling.test.ts  integration.test.ts  output-path.test.ts  retry.test.ts  seed.test.ts  server.test.ts  sessions.test.ts  test_cancellation.py  test_client.py  test_integration.py  test_output_path.py  test_retry.py  test_seed.py  test_server.py  test_sessions.py  test_utils.py  utils.test.ts
(+2 files in other folders)
